add_executable(helloworld helloworld.cpp)
#target_link_libraries(helloworld my_own_library)

add_executable(tests tests.cpp)

add_executable(fract_2 fract_2.cpp)

add_executable(aufgabe-1-3 aufgabe-1-3.cpp)

add_executable(aufgabe-1-9 aufgabe-1-9.cpp)

add_executable(aufgabe-1-10 aufgabe-1-10.cpp)

add_executable(aufgabe-1-11 aufgabe-1-11.cpp)

add_executable(aufgabe-1-12 aufgabe-1-12.cpp)

add_executable(aufgabe-1-15 aufgabe-1-15.cpp)

add_executable(test-1-7 test-1-7.cpp)
# Kommentieren Sie die folgenden Zeilen fuer die Aufgabe `mile_to_kilometer` aus
#add_executable(mile_to_kilometer mile_to_kilometer.cpp)
